fixing alignment

--- a/src/components/HowToPlayParkour/HowToPlayParkour.css
+++ b/src/components/HowToPlayParkour/HowToPlayParkour.css
@@ -3,6 +3,10 @@
     padding: 10px;
     text-align: center; 
     height: 250px;
+    display: flex;
+   flex-direction: column;
+   align-items: center;
+   
 }
 
 .howto-wrapper h1 {
@@ -16,21 +20,20 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    box-sizing: border-box;
    gap: 10px;
    height: 150px;
    max-width: 580px;
 }
 
-.image-container {
-   
-    flex: 1; /* Distributes the space equally between the image containers */
-    
+.tall-image {
+   margin-top: -8px;
 }
 
 .image-container img {
-    width: 100%; /* Makes the image take the full width of its container */
-    height: 120px;
-    display: block; /* Removes any default margins/paddings from the image */
+    width: 100%; 
+    height: 100px;
+    display: block; 
    object-fit: cover;
    object-position: center;
    border-radius: 20px;
